Created about and skills pages

--- a/index.html
+++ b/index.html
@@ -34,12 +34,16 @@
           <h3>AU</h3>
         </div>
       </div>
+      <div class="top-right z-index-10">
+        <div class="p-l-20 p-r-20 p-t-10 p-b-10">
+          <h3 class="text-white">Full-Stack Developer</h3>
+        </div>
+      </div>
     </section>
     <!-- BEGIN JUMBOTRON -->
     <!-- BEGIN HEADER -->
     <nav class="header bottom bg-header light-solid" data-pages="header" data-pages-autofixed="true">
       <!-- BEGIN WHITE BRUSH STROKE -->
-      <div class="demo-brush bottom-left p-t-20" data-pages-bg-image="assets/images/brush_stroke.png"></div>
       <!-- END WHITE BRUSH STROKE -->
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
@@ -47,10 +51,9 @@
           <!-- .header-inner 
                 Allows to horizontally Align elements to the Center
                  -->
-          <div class="header-inner p-b-10">
+          <div class="header-inner p-t-20">
             <!-- BEGIN LOGO -->
-            <h4 class="m-b-0 m-t-0" style="margin-top: 3px;">ALFREDO URDANETA</h4>
-            <h6 class="m-t-5"><strong>FULL-STACK DEVELOPER</strong></h6>
+            <h3>ALFREDO URDANETA</h3>
           </div>
         </div>
         <div class="pull-right">
@@ -80,8 +83,8 @@
                           </a>
               </li>
               <li>
-                <a href="index.html" data-text="Home">My Skills 
-                            <span data-text="Welcome">Technical</span>
+                <a href="skills.html" data-text="Skills">My Skills 
+                            <span data-text="Technical">Technical</span>
                           </a>
               </li>
               <li>
@@ -119,7 +122,7 @@
               <!-- BEGIN IMAGE PARRALAX -->
               <div class="slider-wrapper">
                 <div class="image" data-swiper-parallax="30%">
-                  <div data-pages-bg-image="assets/images/home_bg.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
+                  <div data-pages-bg-image="assets/images/pitch_2.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
                 </div>
               </div>
               <!-- END IMAGE PARRALAX -->
