--- a/inspiration.html
+++ b/inspiration.html
@@ -18,3 +18,114 @@
       </div>
     </section>
     <!-- END CONTENT SECTION -->
+
+    <!-- BEGIN CONTENT SECTION -->
+    <section class="p-b-65 p-t-60 bg-master-dark">
+      <div class="container">
+        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+          <div class="text-center">
+            <h5 class="block-title text-white no-margin">My Skills </h5>
+            <h1 class="text-white col-sm-12 m-t-5 m-b-30">Always Learning.</h1>
+          </div>
+          <div class="row m-t-30">
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="95%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            Ruby On Rails
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="95">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="85%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            Javascript
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="85">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="79%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            React
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="75">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="65%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            Redux
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="65">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="65%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            Node
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="65">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="90%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            UX/UI
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="90">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="75%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            SQL
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="75">0</span>%
+              </p>
+              <p></p>
+            </div>
+            <div class="col-sm-4">
+              <div class="progress progress-small transparent-white m-t-15">
+                <div class="progress-bar progress-bar-white" data-pages-animate="progressbar" data-percentage="90%"></div>
+              </div>
+              <h3 class="no-margin text-white">
+                            Git
+                        </h3>
+              <p class="font-arial hint-text fs-12 text-white">
+                <span data-animation-duration="800" data-pages-animate="number" data-value="90">0</span>%
+              </p>
+              <p></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END CONTENT SECTION -->
