--- a/portfolio.html
+++ b/portfolio.html
@@ -70,16 +70,22 @@
                           </a>
               </li>
               <li>
+                <a href="skills.html" data-text="Skills">My Skills 
+                            <span data-text="Technical">Technical</span>
+                          </a>
+              </li>
+              <li>
+                <a href="about.html" data-text="About">About Me 
+                            <span data-text="See more">See more</span>
+                          </a>
+              </li>
+              <li>
                 <a class="active" href="portfolio.html" data-text="Portofolio">Portfolio 
                             <span data-text="Clients">Work</span></a>
               </li>
               <li>
                 <a href="contact.html" data-text="Contact Us">Contact Me
                             <span data-text="Get in touch">Get in touch </span></a>
-              </li>
-              <li>
-                <a href="contact.html" data-text="Contact Us">Blog
-                            <span data-text="Get in touch">Posts </span></a>
               </li>
             </ul>
             <!-- BEGIN COPYRIGHT FOR MOBILE -->
