--- a/about.html
+++ b/about.html
@@ -62,19 +62,27 @@
           <div class="header-inner">
             <ul class="menu">
               <li>
-                <a href="index.html" data-text="Home">Home </a>
+                <a href="index.html" data-text="Home">Home 
+                            <span data-text="Welcome">Welcome</span>
+                          </a>
               </li>
               <li>
-                <a class="active" href="skills.html" data-text="Skills">My Skills </a>
+                <a href="skills.html" data-text="Skills">My Skills 
+                            <span data-text="Technical">Technical</span>
+                          </a>
               </li>
               <li>
-                <a href="about.html" data-text="About">About Me </a>
+                <a class="active" href="about.html" data-text="About">About Me 
+                            <span data-text="See more">See more</span>
+                          </a>
               </li>
               <li>
-                <a href="portfolio.html" data-text="Portofolio">Portfolio  </a>
+                <a href="portfolio.html" data-text="Portofolio">Portfolio 
+                            <span data-text="Clients">Work</span></a>
               </li>
               <li>
-                <a href="contact.html" data-text="Contact Us">Contact Me </a>
+                <a href="contact.html" data-text="Contact Us">Contact Me
+                            <span data-text="Get in touch">Get in touch </span></a>
               </li>
             </ul>
             <!-- BEGIN COPYRIGHT FOR MOBILE -->
@@ -89,31 +97,30 @@
     </nav>
     <!-- END HEADER -->
     <!-- BEGIN JUMBOTRON -->
-    <section id="demo-hero-1" class="jumbotron full-vh" data-pages="parallax">
+    <section class="jumbotron full-vh" data-pages="parallax">
       <div class="inner full-height">
         <!-- BEGIN SLIDER -->
-        <div class="swiper-container">
+        <div class="swiper-container" id="hero">
           <div class="swiper-wrapper">
             <!-- BEGIN SLIDE -->
-            <div class="swiper-slide fit slide-1">
+            <div class="swiper-slide fit bg-complete">
               <!-- BEGIN IMAGE PARRALAX -->
               <div class="slider-wrapper">
-                <div class="bg-image full-width full-height" data-swiper-parallax="30%" data-pages-bg-image="assets/images/bg_pattern_2.jpg">
+                <div class="image" data-swiper-parallax="30%">
+                  <div data-pages-bg-image="assets/images/home_bg.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
                 </div>
               </div>
               <!-- END IMAGE PARRALAX -->
-              <!-- BEGIN CONTENT -->
               <div class="content-layer">
                 <div class="inner full-height">
                   <div class="container-xs-height full-height">
                     <div class="col-xs-height col-middle text-center">
                       <div class="container sm-m-b-30">
                         <div class="row sm-m-b-30">
-                          <div class="col-md-6 col-md-offset-3 p-b-90 sm-p-b-40 sm-m-b-30">
-                            <h1 class="light text-white sm-no-margin" data-swiper-parallax="-15%">
-                                      My Skills.
+                          <div class="col-md-6 col-md-offset-3 p-b-60 sm-p-b-40 sm-m-b-30">
+                            <h1 class="text-white sm-no-margin" data-swiper-parallax="-15%">
+                                      <strong>This Is Me.</strong>
                                         </h1>
-                            <a href="#" class="block-title text-white link">Learn more</a>
                           </div>
                         </div>
                       </div>
@@ -121,12 +128,11 @@
                   </div>
                 </div>
               </div>
+              <!-- BEGIN CONTENT -->
               <!-- END CONTENT -->
-              <img class="ipad lazy" draggable="false" src="assets/images/keyboard.png" alt="" title="" data-swiper-parallax="80%">
-              <img class="bg-elements p-l-80 hidden-xs lazy" src="assets/images/bg_elements_2.png" data-swiper-parallax="-20%" alt="">
             </div>
             <!-- END SLIDE -->
-          <!-- Add Navigation -->
+          </div>
         </div>
       </div>
       <!-- END SLIDER -->
