--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
             <h1 class="m-t-5 light">My Story</h1>
-            <p class="m-t-20">Our long standing vision has been to bypass the usual admin dashboard structure, and move forward with a more sophisticated yet simple framework that would create a credible impact on the many conventional dashboard users.
+            <p class="m-t-20">Born in Venezuela, I had a very different experience growing up. Safety was never taken for granted and along with that, neither was my family. These safety concerns eventually pushed my family to move to the United States. I brought my 8 year-old self, my never-ending ambition, and bilingual abilities to Florida.
             </p>
             <img src="assets/images/arrow_down.png" class="m-t-15 m-b-30" alt="">
           </div>
@@ -157,26 +157,25 @@
       </div>
     </section>
     <!-- START CONTENT SECTION -->
-    <section id="demo-content-1" class="p-b-100 bg-master-lightest relative" data-pages="parallax">
-      <div class="container p-b-50">
-        <div class="row">
-          <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2">
-            <div class="text-center relative p-b-100 m-b-70 p-t-40">
-              <h6 class="block-title m-t-70 m-b-0">Explore</h6>
-              <h1 class="col-sm-12 p-b-10 m-t-5">Unlimited ways to
-organize your
-content</h1>
-              <button type="button" class="btn btn-lg btn-primary btn-cons btn-rounded m-t-20">Explore</button>
-              <br>
+    <section id="demo-content-1" class="p-b-100 bg-master-lightest relative" style="height: 550px;"data-pages="parallax">
+      <div class="container p-t-100">
+          <div class="md-p-l-20 md-p-r-20 xs-no-padding">
+            <h5 class="block-title hint-text no-margin">Ambition was part of me.</h5>
+            <div class="row">
+              <div class="col-sm-5 col-md-4">
+                <h1 class="m-t-15">I took up coding as a hobby but I decided to make it my career.</h1>
+              </div>
+              <div class="col-sm-7 col-md-8 no-padding xs-p-l-15 xs-p-r-15">
+                <div class="p-t-20 p-l-35 md-p-l-5 md-p-t-15">
+                  <p>As far back as I can recall, I’ve always been a builder and a dreamer.  I remember putting together beautiful city architectures out of playblocks in my kindergarten class, while my classmate was busy sucking boogers out of his nose through a bendy-straw. That’s when I knew I was different.  As a driven intellectual, I strive by doing and seeing results, by achieving something concrete.</p>
+                  <br>
+                  <p>A common trait among gifted students, I started working at a law firm when I was 16 and began taking college classes to meet my high school requirements. My motivation was a car and relief from the stiflingly rigid secondary school system. When I enrolled in college full-time, I found learning by memorization to be pointless. I thrive by doing and seeing results. </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="top-left bottom-right no-overflow full-width full-height">
-        <img src="assets/images/elements_1.png" class="inner lazy" alt="">
-      </div>
-      <img class="iphone lazy" src="assets/images/iphone.png" data-pages="float" data-max-top-translate="40" data-max-bottom-translate="40" data-speed="0.1" data-delay="1000" data-curve="ease" alt="">
-    </section>
+      </section>
     <!-- END CONTENT SECTION -->
     <!-- END CONTENT SECTION -->
     <section class="p-b-100 p-t-100">
@@ -188,10 +187,8 @@ content</h1>
           </div>
           <div class="col-sm-6 col-sm-height col-middle col-lg-4 col-md-4 xs-text-center sm-p-l-30">
             <h1 class="light md-no-margin sm-m-t-30">Make your imagination<br>come alive.</h1>
-            <h6 class="block-title m-t-50">launch your design <i class="pg-arrow_right m-l-10"></i></h6>
-            <p class="m-t-15">Our long standing vision has been to bypass the usual admin dashboard structure, and move forward with a more vary and sophisticated yet simple framework </p>
-            <p class="muted font-arial small-text m-t-30">A product is accessible when all people&mdash;regardless of ability&mdash;can navigate it,
-              <br> understand it, and use it to achieve their goals.</p>
+            <h6 class="block-title m-t-50">Startup Institute <i class="pg-arrow_right m-l-10"></i></h6>
+            <p class="m-t-15">I came across an ad for the Startup Institute one day and it was like a sign from the heavens.  I applied, got accepted, packed my bags, and got on a flight from Miami to Boston.  During my time here, It’s been a common occurrence for me to catch myself lost in coding through the early A.M.. I’ve managed to go from a self-taught web designer, to having the ability to create complex web applications using Ruby on Rails, Spec, Capybara, Bootstrap, Javascript, React, Redux, Node, and the ever-growing list.  Now I’m here, at only 21, pursuing my dreams and excited for my future.  My aspiration is to work alongside a startup, creating something that will have a positive impact on society.  Let’s build something beautiful together. </p>
           </div>
           <div class="col-lg-2 col-md-1 hidden-sm"></div>
         </div>
