Fixed mobile views

--- a/about.html
+++ b/about.html
@@ -146,9 +146,9 @@
             <h1 class="m-t-5 light">My Story</h1>
             <p class="m-t-20">Born in Venezuela, I had a very different experience growing up. Safety was never taken for granted and along with that, neither was my family. These safety concerns eventually pushed my family to move to the United States. I brought my 8 year-old self, my never-ending ambition, and bilingual abilities to Florida.
             </p>
-            <img src="assets/images/arrow_down.png" class="m-t-15 m-b-30" alt="">
+            <img src="assets/images/arrow_down.png" class="m-t-15 m-b-15" alt="">
           </div>
-          <div class="content-mask-md p-t-80 p-b-30">
+          <div class="content-mask-md p-b-30">
             <div class="device_morph pull-center-inner" id="story">
               <img alt="" class="xs-image-responsive-height image-responsive-width" src="assets/images/story.png" id="story">
             </div>
@@ -157,16 +157,16 @@
       </div>
     </section>
     <!-- START CONTENT SECTION -->
-    <section id="demo-content-1" class="p-b-100 bg-master-lightest relative" style="height: 550px;"data-pages="parallax">
+    <section id="demo-content-1" class="bg-master-lightest relative" style="min-height: 450px;"data-pages="parallax">
       <div class="container p-t-100">
-          <div class="md-p-l-20 md-p-r-20 xs-no-padding">
+          <div class="md-p-l-20 md-p-r-20 p-t-50">
             <h5 class="block-title hint-text no-margin">Ambition was part of me.</h5>
             <div class="row">
               <div class="col-sm-5 col-md-4">
                 <h1 class="m-t-15">I took up coding as a hobby but I decided to make it my career.</h1>
               </div>
               <div class="col-sm-7 col-md-8 no-padding xs-p-l-15 xs-p-r-15">
-                <div class="p-t-20 p-l-35 md-p-l-5 md-p-t-15">
+                <div class="p-t-20 p-l-35 p-b-100 md-p-l-5 md-p-t-15">
                   <p>As far back as I can recall, I’ve always been a builder and a dreamer.  I remember putting together beautiful city architectures out of playblocks in my kindergarten class, while my classmate was busy sucking boogers out of his nose through a bendy-straw. That’s when I knew I was different.  As a driven intellectual, I strive by doing and seeing results, by achieving something concrete.</p>
                   <br>
                   <p>A common trait among gifted students, I started working at a law firm when I was 16 and began taking college classes to meet my high school requirements. My motivation was a car and relief from the stiflingly rigid secondary school system. When I enrolled in college full-time, I found learning by memorization to be pointless. I thrive by doing and seeing results. </p>
@@ -178,11 +178,11 @@
       </section>
     <!-- END CONTENT SECTION -->
     <!-- END CONTENT SECTION -->
-    <section class="p-b-100 p-t-100">
+    <section class="m-t-100 p-b-100 p-t-100">
       <div class="container-sm-height">
-        <div class="row row-sm-height sm-m-l-15 sm-m-r-15">
-          <div class="col-lg-2 col-md-1 hidden-sm"></div>
-          <div class="col-sm-6 col-lg-4 col-md-5 col-sm-height col-middle sm-text-center">
+        <div class="row row-sm-height p-b-50 m-b-50 sm-m-l-15 sm-m-r-15">
+          <div class="col-lg-2 col-md-1"></div>
+          <div class="col-sm-6 col-lg-4 col-md-5 m-t-100 m-b-50 col-sm-height col-middle sm-text-center">
             <img class="p-r-40 m-t-10 xs-image-responsive-height sm-no-padding lazy" src="assets/images/story2.png" alt="">
           </div>
           <div class="col-sm-6 col-sm-height col-middle col-lg-4 col-md-4 xs-text-center sm-p-l-30">
