--- a/about.html
+++ b/about.html
@@ -117,8 +117,8 @@
                     <div class="col-xs-height col-middle text-center">
                       <div class="container sm-m-b-30">
                         <div class="row sm-m-b-30">
-                          <div class="col-md-6 col-md-offset-3 p-b-30 sm-p-b-40 sm-m-b-30">
-                            <h1 class="text-white sm-no-margin" data-swiper-parallax="-15%">
+                          <div class="col-md-6 col-md-offset-3 p-b-20 sm-p-b-20 sm-m-b-20">
+                            <h1 class="text-white sm-no-margin" style="text-shadow: 1px 1px black;" data-swiper-parallax="-15%">
                                       <strong>This Is Me.</strong>
                                         </h1>
                           </div>
