--- a/index.html
+++ b/index.html
@@ -28,34 +28,19 @@
     <!-- BEGIN PAGES CSS -->
   </head>
   <body class="pace-dark">
-    <section class="container relative">
-      <div class="top-left z-index-10">
-        <div class="bg-white p-l-20 p-r-20 p-t-10 p-b-10">
-          <h3>AU</h3>
-        </div>
-      </div>
-      <div class="top-right z-index-10">
-        <div class="p-l-20 p-r-20 p-t-10 p-b-10">
-          <h3 class="text-white">Full-Stack Developer</h3>
-        </div>
-      </div>
-    </section>
     <!-- BEGIN JUMBOTRON -->
     <!-- BEGIN HEADER -->
-    <nav class="header bottom bg-header light-solid" data-pages="header" data-pages-autofixed="true">
-      <!-- BEGIN WHITE BRUSH STROKE -->
-      <!-- END WHITE BRUSH STROKE -->
+    <nav class="header bg-header transparent-light " data-pages="header" data-pages-header="autoresize" data-pages-resize-class="dark">
       <div class="container relative">
         <!-- BEGIN LEFT CONTENT -->
-        <div class="pull-left m-t-0">
-          <!-- .header-inner 
-                Allows to horizontally Align elements to the Center
-                 -->
-          <div class="header-inner p-t-20">
+        <div class="pull-left">
+          <!-- .header-inner Allows to vertically Align elements to the Center-->
+          <div class="header-inner">
             <!-- BEGIN LOGO -->
-            <h3>ALFREDO URDANETA</h3>
+            <h3 class="text-white">ALFREDO URDANETA</h3>
           </div>
         </div>
+        <!-- BEGIN HEADER TOGGLE FOR MOBILE & TABLET -->
         <div class="pull-right">
           <div class="header-inner">
             <div class="visible-sm-inline visible-xs-inline menu-toggler pull-right p-l-10" data-pages="header-toggle" data-pages-element="#header">
@@ -65,11 +50,12 @@
             </div>
           </div>
         </div>
+        <!-- END HEADER TOGGLE FOR MOBILE & TABLET -->
         <!-- BEGIN RIGHT CONTENT -->
-        <div class="menu-content pull-right clearfix" data-pages="menu-content" data-pages-direction="slideRight" id="header">
+        <div class="pull-right menu-content clearfix" data-pages-direction="slideRight" id="header">
           <!-- BEGIN HEADER CLOSE TOGGLE FOR MOBILE -->
           <div class="pull-right">
-            <a href="#" class="text-black link padding-10 visible-xs-inline visible-sm-inline pull-right m-t-10 m-b-10 m-r-10" data-pages="header-toggle" data-pages-element="#header">
+            <a href="#" class="padding-10 visible-xs-inline visible-sm-inline pull-right m-t-10 m-b-10 m-r-10" data-pages="header-toggle" data-pages-element="#header">
               <i class=" pg-close_line"></i>
             </a>
           </div>
@@ -88,8 +74,8 @@
                           </a>
               </li>
               <li>
-                <a href="about.html" data-text="Home">About Me 
-                            <span data-text="Welcome">See more</span>
+                <a href="about.html" data-text="About">About Me 
+                            <span data-text="See more">See more</span>
                           </a>
               </li>
               <li>
@@ -127,6 +113,23 @@
               </div>
               <!-- END IMAGE PARRALAX -->
               <!-- BEGIN CONTENT -->
+              <div class="content-layer">
+                <div class="inner full-height">
+                  <div class="container-xs-height full-height">
+                    <div class="col-xs-height col-middle text-center">
+                      <div class="container sm-m-b-30">
+                        <div class="row sm-m-b-30">
+                          <div class="col-md-6 col-md-offset-3 p-b-20 sm-p-b-20 sm-m-b-20">
+                            <h1 class="text-white sm-no-margin" style="font-weight: 400; text-shadow: 1px 1px black;" data-swiper-parallax="-15%">
+                                      Full-Stack Developer
+                                        </h1>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <!-- END CONTENT -->
             </div>
             <!-- END SLIDE -->
