Added mouse scroll to about and index headers

--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
             </div>
             <!-- END SLIDE -->
           </div>
+          <div class="mouse-wrapper">
+            <div class="mouse">
+              <div class="mouse-scroll"></div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- END SLIDER -->
