--- a/about.html
+++ b/about.html
@@ -133,6 +133,11 @@
             </div>
             <!-- END SLIDE -->
           </div>
+          <div class="mouse-wrapper">
+            <div class="mouse">
+              <div class="mouse-scroll"></div>
+            </div>
+          </div>
         </div>
       </div>
       <!-- END SLIDER -->
