Added bottom padding for mouse for mobile view

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </div>
             <!-- END SLIDE -->
           </div>
-          <div class="mouse-wrapper">
+          <div class="mouse-wrapper p-b-35">
             <div class="mouse">
               <div class="mouse-scroll"></div>
             </div>
