--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
             </div>
             <!-- END SLIDE -->
           </div>
-          <div class="mouse-wrapper">
+          <div class="mouse-wrapper p-b-35">
             <div class="mouse">
               <div class="mouse-scroll"></div>
             </div>
