--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Alfredo Urdaneta | Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="google-site-verification" content="__KMI05vvE6g8LKvh_mkuGooBLcV_QEJ9P4Qlwlfkec" />
     <link rel="apple-touch-icon" href="pages/ico/60.png">
     <link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="pages/ico/120.png">
@@ -13,8 +14,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta content="" name="description" />
-    <meta content="" name="author" />
+    <meta content="Full-Stack Developer" name="description" />
+    <meta content="Alfredo Urdaneta" name="author" />
     <!-- BEGIN PLUGINS -->
     <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -37,7 +38,7 @@
           <!-- .header-inner Allows to vertically Align elements to the Center-->
           <div class="header-inner">
             <!-- BEGIN LOGO -->
-            <h3 class="text-white">ALFREDO URDANETA</h3>
+            <h3 class="text-white"><a class="text-white" href="index.html" data-text="Home">ALFREDO URDANETA</a><h3 class="text-white">
           </div>
         </div>
         <!-- BEGIN HEADER TOGGLE FOR MOBILE & TABLET -->
@@ -108,7 +109,7 @@
               <!-- BEGIN IMAGE PARRALAX -->
               <div class="slider-wrapper">
                 <div class="image" data-swiper-parallax="30%">
-                  <div data-pages-bg-image="assets/images/pitch_2.jpg" data-bg-overlay-class="bg-white" class="full-height"></div>
+                  <div data-pages-bg-image="assets/images/pitch_2.jpg" data-bg-overlay-class="bg-white" class="full-height" alt="Home Background"></div>
                 </div>
               </div>
               <!-- END IMAGE PARRALAX -->
@@ -160,17 +161,17 @@
       </div>
       <div class="content-mask-md p-t-80">
         <div class="device_morph pull-center-inner" id="iphone01">
-          <img alt="" class="xs-image-responsive-height image-responsive-width" src="assets/images/b_phone.png" id="mobile_phone">
+          <img alt="iPhone Border" class="xs-image-responsive-height image-responsive-width" src="assets/images/b_phone.png" id="mobile_phone">
           <div class="screen">
             <div class="iphone-border">
-              <img src="assets/images/sign.png" class="lazy image-responsive-height" alt="" data-pages="float">
+              <img src="assets/images/sign.png" class="lazy image-responsive-height" alt="Self-Defined" data-pages="float">
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- END INTRO CONTENT -->
-    <section class="bg-white relative full-width p-t-100 p-b-100 bg-position-top-center bg-size-reset xs-bg-size-cover" data-pages="parallax" data-pages-bg-image="assets/images/mount_phone.jpg">
+    <section class="bg-white relative full-width p-t-100 p-b-100 bg-position-top-center bg-size-reset xs-bg-size-cover" data-pages="parallax" data-pages-bg-image="assets/images/mount_phone.jpg" alt="Creation">
       <div class="container m-t-55">
         <div class="md-p-l-25 md-p-r-15 m-b-0 xs-no-padding">
           <div class="row p-t-100">
@@ -186,7 +187,7 @@
     </section>
     <section class="bg-white relative p-b-85 p-t-75 p-b-65 p-t-55">
     </section>
-    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg">
+    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg" alt="Paramount-Theater">
       <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
           <div class="text-center">
@@ -209,7 +210,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <img src="assets/images/signature.gif" width="250" height="50" data-src-retina="assets/images/signature.gif" class="logo inline m-r-50" alt="">
+            <img src="assets/images/signature.gif" width="250" height="50" data-src-retina="assets/images/signature.gif" class="logo inline m-r-50" alt="My-Signature">
           </div>
           <div class="col-sm-6 text-right font-arial sm-text-left">
             <p class="fs-12 m-t-15 small-text">Copyright &copy; 2017 Alfredo Urdaneta. All Rights Reserved.
