--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta content="" name="description" />
-    <meta content="" name="author" />
+    <meta content="Full-Stack Developer" name="description" />
+    <meta content="Alfredo Urdaneta" name="author" />
     <!-- BEGIN PLUGINS -->
     <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" />
     <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -38,7 +38,7 @@
           <div class="header-inner">
             <!-- BEGIN LOGO -->
             <div class="bg-white p-l-20 p-r-20 p-t-10 p-b-10">
-              <h3>AU</h3>
+              <h3><a class="text-black" href="index.html" data-text="Home">AU</a></h3>
             </div>
           </div>
         </div>
