Added meta tag for google verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Alfredo Urdaneta | Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="google-site-verification" content="__KMI05vvE6g8LKvh_mkuGooBLcV_QEJ9P4Qlwlfkec" />
+    <meta name="google-site-verification" content="_q4Kez0usiqVj0DSXAtshYfCtmZzGkTZdOx8v7WiH-A" />
     <link rel="apple-touch-icon" href="pages/ico/60.png">
     <link rel="apple-touch-icon" sizes="76x76" href="pages/ico/76.png">
     <link rel="apple-touch-icon" sizes="120x120" href="pages/ico/120.png">
