added new sitemap

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
     </section>
     <!-- END JUMBOTRON -->
     <!-- BEGIN CONTENT SECTION -->
-    <section class="p-b-100 p-t-70" style="height:565px;">
+    <section id="intro" class="p-b-100 p-t-70" style="height:565px;">
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
@@ -162,7 +162,7 @@
       </div>
     </section>
     <!-- START CONTENT SECTION -->
-    <section id="demo-content-1" class="bg-master-lightest relative" style="min-height: 450px;"data-pages="parallax">
+    <section id="part1" class="bg-master-lightest relative" style="min-height: 450px;"data-pages="parallax">
       <div class="container p-t-100">
           <div class="md-p-l-20 md-p-r-20 p-t-50">
             <h5 class="block-title hint-text no-margin">Ambition was part of me.</h5>
@@ -183,7 +183,7 @@
       </section>
     <!-- END CONTENT SECTION -->
     <!-- END CONTENT SECTION -->
-    <section class="m-t-100 p-b-100 p-t-100">
+    <section id="part2" class="m-t-100 p-b-100 p-t-100">
       <div class="container-sm-height">
         <div class="row row-sm-height p-b-50 m-b-50 sm-m-l-15 sm-m-r-15">
           <div class="col-lg-2 col-md-1"></div>
@@ -201,7 +201,7 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START FOOTER -->
-    <section class="p-b-10 p-t-15">
+    <section id="footer" class="p-b-10 p-t-15">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
