--- a/contact.html
+++ b/contact.html
@@ -105,10 +105,10 @@
       <!-- START CONTACT SECTION -->
       <section class="container container-fixed-lg p-t-65 p-b-100  sm-p-b-30 sm-m-b-30">
         <div class="row">
-          <div class="col-md-6 m-t-20">
+          <div id="picture" class="col-md-6 m-t-20">
             <img src="assets/images/stagger.jpg" alt="">
           </div>
-          <div class="col-md-6">
+          <div id="contact" class="col-md-6">
             <div class="visible-xs visible-sm b-b b-grey-light m-t-35 m-b-30"></div>
             <div class="p-l-40 sm-p-l-0 sm-p-t-10">
               <h2 class="p-b-15">Want to work together?</h2>
@@ -150,7 +150,7 @@
       <!-- END GOOGLE MAP -->
     </section>
     <!-- START FOOTER -->
-    <section class="p-b-10 p-t-15">
+    <section id="footer" class="p-b-10 p-t-15">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
