--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
     <!-- END JUMBOTRON -->
     <!-- BEGIN INTRO CONTENT -->
-    <section id="launch" class="p-b-40 p-t-60 no-overflow relative" style="height: 860px;">
+    <section id="intro" class="p-b-40 p-t-60 no-overflow relative" style="height: 860px;">
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
@@ -172,7 +172,7 @@
       </div>
     </section>
     <!-- END INTRO CONTENT -->
-    <section class="bg-white relative full-width p-t-100 p-b-100 bg-position-top-center bg-size-reset xs-bg-size-cover" data-pages="parallax" data-pages-bg-image="assets/images/mount_phone.jpg" alt="Creation">
+    <section id="quote" class="bg-white relative full-width p-t-100 p-b-100 bg-position-top-center bg-size-reset xs-bg-size-cover" data-pages="parallax" data-pages-bg-image="assets/images/mount_phone.jpg" alt="Creation">
       <div class="container m-t-55">
         <div class="md-p-l-25 md-p-r-15 m-b-0 xs-no-padding">
           <div class="row p-t-100">
@@ -188,7 +188,7 @@
     </section>
     <section class="bg-white relative p-b-85 p-t-75 p-b-65 p-t-55">
     </section>
-    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg" alt="Paramount-Theater">
+    <section id="connect" class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/paramount.jpg" alt="Paramount-Theater">
       <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
           <div class="text-center">
@@ -207,7 +207,7 @@
     </section>
     <!-- BEGIN CONTENT SECTION -->
     <!-- START FOOTER -->
-    <section class="p-b-10 p-t-15">
+    <section id="footer" class="p-b-10 p-t-15">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
