--- a/portfolio.html
+++ b/portfolio.html
@@ -101,7 +101,7 @@
       </div>
     </nav>
     <!-- END HEADER -->
-    <section class="m-t-100 sm-m-t-30">
+    <section id="intro" class="m-t-100 sm-m-t-30">
       <!-- START PORTFOLIO SECTION -->
       <section class="p-b-40 p-t-55">
         <div class="container">
@@ -111,7 +111,7 @@
              <h3 class="text-center">My Work. Click them, they don't bite.</h3>
           </div>
         </div>
-        <div class="gallery">
+        <div id="work" class="gallery">
           <div class="grid-sizer col-sm-3 col-xs-6 no-padding"></div>
           <!-- START GALLERY ITEM -->
             <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
@@ -208,7 +208,7 @@
       </section>
       <!-- END PORTFOLIO SECTION -->
       <!-- BEGIN CONTENT SECTION -->
-      <section class="p-b-85 p-t-75 bg-master-white">
+      <section id="process" class="p-b-85 p-t-75 bg-master-white">
         <div class="container">
           <div class="md-p-l-20 xs-no-padding clearfix">
             <div class="row visible-sm">
@@ -258,14 +258,14 @@
       </section>
       <!-- END CONTENT SECTION -->
       <!-- BEGIN CONTENT SECTION -->
-      <section class="p-b-70 p-t-30">
+      <section id="more" class="p-b-70 p-t-30">
         <div class="container text-center">
           <h3 class="block-title no-margin">There's a lot more.</h3>
           <h5>If you want to see more of my projects, or any of their code, check out my <a href="http://www.github.com/aurda012"><button type="button" class="btn btn-info m-l-5 m-b-5">Github!</button></a></h5>
         </div>
       </section>
       <!-- END CONTENT SECTION -->
-      <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/table.jpg">
+      <section id="connect" class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/table.jpg">
         <div class="container p-b-50 p-t-50">
         <div class="col-md-8 col-md-offset-2">
           <div class="text-center">
@@ -284,7 +284,7 @@
       </section>
       <!-- BEGIN CONTENT SECTION -->
     <!-- START FOOTER -->
-    <section class="p-b-10 p-t-15">
+    <section id="footer" class="p-b-10 p-t-15">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
