--- a/skills.html
+++ b/skills.html
@@ -141,7 +141,7 @@
     </section>
     <!-- END JUMBOTRON -->
     <!-- BEGIN CONTENT SECTION -->
-    <section class="p-b-60 p-t-70">
+    <section id="intro" class="p-b-60 p-t-70">
       <div class="container text-center">
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2">
@@ -156,7 +156,7 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START CONTENT SECTION -->
-    <section class="p-b-60 p-t-60">
+    <section id="frontend" class="p-b-60 p-t-60">
       <div class="container-sm-height text-center">
         <div class="row row-sm-height sm-m-l-15 sm-m-r-15">
           <div class="col-sm-6 col-sm-height col-middle col-lg-4 col-md-4 xs-text-center sm-p-l-30">
@@ -231,7 +231,7 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START CONTENT SECTION -->
-    <section class="p-b-90 p-t-60">
+    <section id="backend" class="p-b-90 p-t-60">
       <div class="container-sm-height text-center">
         <div class="row row-sm-height sm-m-l-15 sm-m-r-15">
           <div class="col-sm-6 col-sm-height col-middle col-lg-4 col-md-4 xs-text-center sm-p-l-30">
@@ -295,7 +295,7 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START CONTENT SECTION -->
-    <section class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/gallery_hero_2.jpg">
+    <section id="quote" class="p-b-70 p-t-70 demo-hero-5" data-pages-bg-image="assets/images/gallery_hero_2.jpg">
       <div class="container p-b-50 p-t-50">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
@@ -311,7 +311,7 @@
     </section>
     <!-- END CONTENT SECTION -->
     <!-- START FOOTER -->
-    <section class="p-b-10 p-t-15">
+    <section id="footer" class="p-b-10 p-t-15">
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
